--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- header top section -->
 <section class="banner" role="banner">
   <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="index.html"><h1>PPRBTC</h1></a>
+    <div class="header-content clearfix"> <a class="logo" href="index.html"><h1>Bitcoin Paper</h1></a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <!-- <li>hello world</li> -->
@@ -45,7 +45,6 @@
       </div>
       <div class="col-md-5 col-sm-6 hero">
         <div class="hero-content">
-          <h3>Paper Bitcoin Wallet</h3> 
           <img src="images/wallet.png" class="img-responsive" alt=""> </a> </div>
         </div>
         <!-- hero --> 
