--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>PPRBTC.io</title>
+<title>BTC Paper</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/flexslider.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -148,7 +148,7 @@
   <div class="container">
     <div class="col-md-6 left">
       <h4>
-        <a href="https://medium.com/@leondo">-leon</a>
+        <!-- <a href="https://medium.com/@leondo">-leon</a> -->
       </h4>
       <!-- <p> Call: 612.269.8419 OR Email : <a href="mailto:hello@agency.com"> hello@agency.com </a></p> -->
     </div>
